<resources>
    <string name="app_name">ADG- task1</string>
    <string name="display">TextView</string>
    <string name="ac">AC</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="mul">x</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="back">Back</string>
    <string name="devide">/</string>
    <string name="mod">%</string>
</resources>